--- a/main/package.json
+++ b/main/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "qiankun": "^2.10.5",
     "vue": "^3.2.47"
   },
   "devDependencies": {
