--- a/main/package.json
+++ b/main/package.json
@@ -4,18 +4,26 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port=10011",
     "build": "vue-tsc && vite build",
     "rimraf": "rimraf node_modules",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "element-plus": "^2.3.3",
+    "normalize.css": "^8.0.1",
     "qiankun": "^2.10.5",
-    "vue": "^3.2.47"
+    "sass": "^1.62.0",
+    "vue": "^3.2.47",
+    "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
+    "@types/node": "^18.15.12",
     "@vitejs/plugin-vue": "^4.1.0",
     "typescript": "^4.9.3",
+    "unplugin-auto-import": "^0.15.3",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.2.0",
     "vue-tsc": "^1.2.0"
   }
