--- a/sub-react/package.json
+++ b/sub-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myreact",
+  "name": "sub-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,26 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^5.4.0",
-    "i18next": "^22.4.14",
-    "i18next-browser-languagedetector": "^7.0.1",
-    "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^12.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.10.0",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "reset.css": "^2.0.2",
-    "sass": "^1.55.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
+    "typescript": "^4.9.3",
+    "vite": "^4.2.0"
   }
 }
