--- a/main/tsconfig.json
+++ b/main/tsconfig.json
@@ -31,10 +31,7 @@
     },
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue"
+    "src/*"
   ],
   "exclude": [
     "dist",
