--- a/main/package.json
+++ b/main/package.json
@@ -16,7 +16,8 @@
     "qiankun": "^2.10.5",
     "sass": "^1.62.0",
     "vue": "^3.2.47",
-    "vue-i18n": "^9.2.2"
+    "vue-i18n": "^9.2.2",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/node": "^18.15.12",
