嵌入jquery子应用

--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "dev:main": "cd main && yarn dev",
     "dev:vue3": "cd sub-vue3 && yarn dev",
     "dev:react": "cd sub-react && yarn dev",
+    "dev:jquery": "cd sub-jquery && yarn dev",
     "r:all": "npm-run-all --serial rimraf:* && rimraf node_modules",
     "rimraf:main": "cd main && yarn rimraf",
     "rimraf:vue3": "cd sub-vue3 && yarn rimraf",
     "rimraf:react": "cd sub-react && yarn rimraf",
+    "rimraf:jquery": "cd sub-jquery && yarn rimraf",
     "build": "npm-run-all build:* && bash ./scripts/bundle.sh",
     "build:sub-react": "cd sub-react && yarn build",
     "build:sub-vue": "cd sub-vue && yarn build",
+    "build:jquery": "cd sub-jquery && yarn build",
     "build:main": "cd main && yarn build"
   },
   "author": "",
