--- a/sub-react/package.json
+++ b/sub-react/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-qiankun": "^1.0.15"
   },
   "devDependencies": {
+    "@types/node": "^18.16.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
