--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "install:main": "cd main && yarn",
     "install:sub-vue3": "cd sub-vue3 && yarn",
     "install:sub-react": "cd sub-react && yarn",
+    "install:sub-jquery": "cd sub-jquery && yarn",
     "dev": "npm-run-all --parallel dev:*",
-    "dev:main": "cd main && yarn dev",
+    "dev:main": "cd main && yarn dev --open",
     "dev:vue3": "cd sub-vue3 && yarn dev",
     "dev:react": "cd sub-react && yarn dev",
     "dev:jquery": "cd sub-jquery && yarn dev",
