--- a/main/.vscode/settings.json
+++ b/main/.vscode/settings.json
@@ -4,6 +4,11 @@
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
     },
+    "eslint.validate": [
+        "javascript",
+        "javascriptreact",
+        "typescript"
+    ],
     "[vue]": {
         "editor.defaultFormatter": "Vue.volar"
     },
